--- a/aspcrud1/Views/Home/Index.cshtml
+++ b/aspcrud1/Views/Home/Index.cshtml
@@ -57,28 +57,28 @@
             <div align="center" class="modal-body">
                 <form>
                     <div class="mb-1">
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control input-lg datos input_dato" id="nombre">
+                        <label for="Nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control input-lg datos input_dato" id="Nombre">
                     </div>
                     <br>
                     <div class="mb-1">
-                        <label for="apellido_paterno" class="form-label">Apellido Paterno</label>
-                        <input type="text" class="form-control input-lg datos input_dato" id="apellido_paterno">
+                        <label for="ApellidoP" class="form-label">Apellido Paterno</label>
+                        <input type="text" class="form-control input-lg datos input_dato" id="ApellidoP">
                     </div>
                     <br>
                     <div class="mb-1">
-                        <label for="apellido_materno" class="form-label">Apellido Materno</label>
-                        <input type="text" class="form-control input-lg datos input_dato" id="apellido_materno">
+                        <label for="ApellidoM" class="form-label">Apellido Materno</label>
+                        <input type="text" class="form-control input-lg datos input_dato" id="ApellidoM">
                     </div>
                     <br>
                     <div class="mb-1">
-                        <label for="direccion" class="form-label">Direccion</label>
-                        <input type="text" class="form-control input-lg datos input_dato" id="direccion">
+                        <label for="Direccion" class="form-label">Direccion</label>
+                        <input type="text" class="form-control input-lg datos input_dato" id="Direccion">
                     </div>
                     <br>
                     <div class="mb-1">
-                        <label for="telefono" class="form-label">Telefono</label>
-                        <input type="text" class="form-control input-lg datos input_dato" id="telefono">
+                        <label for="Telefono" class="form-label">Telefono</label>
+                        <input type="text" class="form-control input-lg datos input_dato" id="Telefono">
                     </div>
                     <br>
                 </form>
